[package]
name = "trible-pile"
version = "0.1.0"
edition = "2021"

[dependencies]
memmap2 = "0.9.5"
anybytes = "0.18.0"
zerocopy = { version = "0.8.14", features = ["derive"] }
digest = "0.10.7"
blake3 = { version = "1.5.0", features = ["traits-preview"] }
hex-literal = "0.3.4"


[dev-dependencies]
tempfile = "3.15.0"